fixed sizing issue with titles of pages on mobile

--- a/css/input-form.css
+++ b/css/input-form.css
@@ -1,3 +1,6 @@
+.root {
+    padding: 10px;
+}
 .recipe-forms{
     display: flex;
     flex-direction: column;
